tests/error/appendString-wrong-2nd-argument.uplc
(program 0.0.0 [ [ (builtin appendString) (con string " mundo!") ] (con integer 0) ])